# ChangeLog for www-client/opera
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.104 2007/07/08 18:04:47 jer Exp $

*opera-9.22.651 (08 Jul 2007)

  08 Jul 2007; Jeroen Roovers <jer@gentoo.org> +opera-9.22.651.ebuild:
  http://my.opera.com/desktopteam/blog/yet-another-merlin-build

  07 Jul 2007; Jeroen Roovers <jer@gentoo.org>
  files/opera-9.21-pluginpath.patch, opera-9.21-r1.ebuild:
  Fix elog messages wrt bug #183689. Add MANPATH to /etc/env.d/90opera.

  07 Jul 2007; Jeroen Roovers <jer@gentoo.org>
  -files/opera-9.21-install.patch:
  Remove deprecated patch.

*opera-9.21-r1 (07 Jul 2007)

  07 Jul 2007; Jeroen Roovers <jer@gentoo.org>
  +files/opera-9.21-pluginpath.patch, +opera-9.21-r1.ebuild:
  Revision bump to apply a patch that extends the default site wide plugin
  paths (bug #181300).

  27 Jun 2007; Jeroen Roovers <jer@gentoo.org> -opera-9.20.ebuild:
  Removing old version.

  27 Jun 2007; Christian Faulhammer <opfer@gentoo.org> opera-9.21.ebuild:
  stable x86, bug 183404

  27 Jun 2007; Lars Weiler <pylon@gentoo.org> opera-9.21.ebuild:
  Stable on ppc; bug #183404.

  27 Jun 2007; Ferris McCormick <fmccor@gentoo.org> opera-9.21.ebuild:
  Sparc stable --- Bug #183404 --- works fine for me.

  27 Jun 2007; Christoph Mende <angelos@gentoo.org> opera-9.21.ebuild:
  Stable on amd64 wrt bug 183404

  24 May 2007; Jeroen Roovers <jer@gentoo.org> files/opera.desktop:
  Updated to meet desktop entry specification, except for the previous GNOME
  "fix".

  22 May 2007; Jeroen Roovers <jer@gentoo.org> opera-9.21.ebuild:
  Make the debug USE flag go away. Tx jakub (bug #179393).

  21 May 2007; Jeroen Roovers <jer@gentoo.org> -opera-9.10.ebuild:
  Removing 9.10 because of security bugs and because it is no longer required
  for bug #176085.

*opera-9.21 (21 May 2007)

  21 May 2007; Jeroen Roovers <jer@gentoo.org> -opera-9.20-r1.ebuild,