@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX opera-9.00-install.patch 320 RMD160 2bc2e345193c007d10db4b39335e7695cd85e4ba SHA1 aff6a31af75ffe1b073059ae5b89d3416daac384 SHA256 c0415f9832624b0f4527b4707f01f1bf069bc9cb63c25fc180218c5543471ed2
 MD5 de8c242f353b3b072c7b64150f597fd0 files/opera-9.00-install.patch 320
 RMD160 2bc2e345193c007d10db4b39335e7695cd85e4ba files/opera-9.00-install.patch 320
@@ -22,22 +25,22 @@ DIST opera-9.22-20070705.1-static-qt.ppc-en-651.tar.bz2 6841598 RMD160 dc3e3ab60
 DIST opera-9.22-20070705.1-static-qt.sparc-en-651.tar.bz2 6739065 RMD160 9dc38ee0fb54dd2277db4ee3ed855fd21b421348 SHA1 dc833284d9f6005d8aba0161e40746f7d4002277 SHA256 251a40f1dbd8276a47df89038cee93f53e219bd593a9737bf80cff3254e36ca7
 DIST opera-9.22-20070705.4-shared-qt.i386.freebsd-en-651.tar.bz2 5121933 RMD160 ef3b65b08d17702d862c0bfe08ceb9f9f149f410 SHA1 06c08f4683cb7de58f55cadeb3f65ac61ed0e255 SHA256 f62f22e1a98e596195a67e80f6a1275d478ca83fb53da8e9d7f68ca22174b10a
 DIST opera-9.22-20070705.6-shared-qt.i386-en-651.tar.bz2 5226942 RMD160 077018469d781a264d36726f8c2386145e253852 SHA1 05df2a7b156a458086de7916c59865b5e865d618 SHA256 c93d7d4263b860ed444305104f55aa3520c34709a039f4b3a7c264cd361570ef
-EBUILD opera-9.21-r1.ebuild 5720 RMD160 d9e59e28048246572b006e4b9421e140022fcd72 SHA1 60c4f91ab0e90890e1ad9a1397ec529e8c389a95 SHA256 fe0916ca6a6cb853e1d29eec9ad2e40e0092ff6d3105ea8efd566e19d77a58ea
-MD5 2ce5aa2c348ae15324c94909627023ec opera-9.21-r1.ebuild 5720
-RMD160 d9e59e28048246572b006e4b9421e140022fcd72 opera-9.21-r1.ebuild 5720
-SHA256 fe0916ca6a6cb853e1d29eec9ad2e40e0092ff6d3105ea8efd566e19d77a58ea opera-9.21-r1.ebuild 5720
-EBUILD opera-9.21.ebuild 5661 RMD160 d2366882ab24dbb2e1be1fc1d28f3388e8bebb14 SHA1 d517c19ebe001e11941ddda0edae0422635aeab3 SHA256 c4ef58681bf373874c194cfc16961db7d314b224939be7b73e721382064c4e7b
-MD5 1b7a6ad4f142394bb5bb84aea999c849 opera-9.21.ebuild 5661
-RMD160 d2366882ab24dbb2e1be1fc1d28f3388e8bebb14 opera-9.21.ebuild 5661
-SHA256 c4ef58681bf373874c194cfc16961db7d314b224939be7b73e721382064c4e7b opera-9.21.ebuild 5661
-EBUILD opera-9.22.651.ebuild 5849 RMD160 2d5125f714acec67c6b87f57bb9b02a693c557e9 SHA1 99875b3f51bf68c67e5d86161b072782f049817a SHA256 0660ba3b098e34990c7cdc55aca7cd66cda2e1774c78852a0b894c11990e6aac
-MD5 6e1c09ee32f0c70541c1c1d688c1cbbf opera-9.22.651.ebuild 5849
-RMD160 2d5125f714acec67c6b87f57bb9b02a693c557e9 opera-9.22.651.ebuild 5849
-SHA256 0660ba3b098e34990c7cdc55aca7cd66cda2e1774c78852a0b894c11990e6aac opera-9.22.651.ebuild 5849
-MISC ChangeLog 28294 RMD160 2f77745daa3985589e5f9ef3c0ad168ae61079f3 SHA1 6237d0c29984ad60639fc50f2a6b3cc4d80e1771 SHA256 d3716dc92237fa781976003563f09ed4b262eda3a24beb0f51149a93173b9934
-MD5 eb4cdfc03c53d83f4c3633fab099b295 ChangeLog 28294
-RMD160 2f77745daa3985589e5f9ef3c0ad168ae61079f3 ChangeLog 28294
-SHA256 d3716dc92237fa781976003563f09ed4b262eda3a24beb0f51149a93173b9934 ChangeLog 28294
+EBUILD opera-9.21-r1.ebuild 5694 RMD160 8c2b6f6d2fffa58aa161093e705731c083cb2836 SHA1 f032e06f2045149e93af96ea12f55ecb9264e040 SHA256 28a76bb4a4abd2cd1b4b9789795515f9fb2894351cd852bfabb9102edb7f3cde
+MD5 a89f303f1c6692d498b964d8f6d42eb8 opera-9.21-r1.ebuild 5694
+RMD160 8c2b6f6d2fffa58aa161093e705731c083cb2836 opera-9.21-r1.ebuild 5694
+SHA256 28a76bb4a4abd2cd1b4b9789795515f9fb2894351cd852bfabb9102edb7f3cde opera-9.21-r1.ebuild 5694
+EBUILD opera-9.21.ebuild 5633 RMD160 c20d59a21a49a0fd2bd644f5ebcb2ea747ccbfa8 SHA1 196df415177c3ba53ec43d6f30e99555470e611b SHA256 6d906137ebffe8ebfab56df361a165e5f9d8187925031eaf0f84ef0773c1135a
+MD5 1878ab55198cd39662c410346a0ad284 opera-9.21.ebuild 5633
+RMD160 c20d59a21a49a0fd2bd644f5ebcb2ea747ccbfa8 opera-9.21.ebuild 5633
+SHA256 6d906137ebffe8ebfab56df361a165e5f9d8187925031eaf0f84ef0773c1135a opera-9.21.ebuild 5633
+EBUILD opera-9.22.651.ebuild 5823 RMD160 03b9ced7f3d1378cac1dfdcfe6efc0d4a13e6777 SHA1 4088755b728518f705f6b0f7e534bab29e5ab572 SHA256 b22a5d38363f56ab775d6e53b425d3caba6de1eec0b65407cb97a070fb34a3b4
+MD5 385846cfa72e1a37ac9a1c5d54e439f6 opera-9.22.651.ebuild 5823
+RMD160 03b9ced7f3d1378cac1dfdcfe6efc0d4a13e6777 opera-9.22.651.ebuild 5823
+SHA256 b22a5d38363f56ab775d6e53b425d3caba6de1eec0b65407cb97a070fb34a3b4 opera-9.22.651.ebuild 5823
+MISC ChangeLog 28479 RMD160 af9b5ed8714113ecfc09f4ea9af26ebb3510fb10 SHA1 2bbacd0f1a2287dfb3bcc67a7ae6b765cad120e7 SHA256 99d953ba1266baa6acff15299184e42e358af208296dd33b11c3105ac16028b9
+MD5 a07e7296224bad93cb8c288436e1cae8 ChangeLog 28479
+RMD160 af9b5ed8714113ecfc09f4ea9af26ebb3510fb10 ChangeLog 28479
+SHA256 99d953ba1266baa6acff15299184e42e358af208296dd33b11c3105ac16028b9 ChangeLog 28479
 MISC metadata.xml 314 RMD160 a8ac5ef4c09e8e84b23eda16e27c5c9ff94be3ca SHA1 e8c243cb101fa6394ab03e798b26a9236416c778 SHA256 d2bd8cedc8024568ce3ed94a8fc2f973c7e713990aac862e03cdded86d57beb8
 MD5 dbaecd1106290cdb2646380dd226c9e8 metadata.xml 314
 RMD160 a8ac5ef4c09e8e84b23eda16e27c5c9ff94be3ca metadata.xml 314
@@ -51,3 +54,10 @@ SHA256 73e201315fa5357161151022ec2f98af26862f3b03be08e4aa18bf413033b9f6 files/di
 MD5 d3925d43fac5575f93757be06e4e7207 files/digest-opera-9.22.651 2070
 RMD160 4c24d0a56413bbfab6e08ce55ac34f3408ac18a9 files/digest-opera-9.22.651 2070
 SHA256 946df4f046d9f1471ece28cd593dc8f719703dace9f15b95c76d61118379cbb4 files/digest-opera-9.22.651 2070
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.4 (GNU/Linux)
+
+iD8DBQFGkY/jp/wUKkr7RBoRAiOwAJ9aOWoAlMGJrGGfsXDWDHMtPuY+kACfSTvn
+sqsdZ7wbYvXA39j5jGzgi0E=
+=KTU4
+-----END PGP SIGNATURE-----
