@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/opera/opera-9.22.651.ebuild,v 1.1 2007/07/08 18:04:47 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/opera/opera-9.22.651.ebuild,v 1.2 2007/07/09 01:28:35 vapier Exp $
 
 GCONF_DEBUG="no"
 
@@ -34,8 +34,7 @@ SRC_URI="
 	x86-fbsd? ( !qt-static? ( ${OPERA_URI}intel-freebsd/${PN}-${OPERAVER}.4-shared-qt.i386.freebsd-${OPERALNG}-${OPERASUFF}.tar.bz2 ) )
 	x86-fbsd? ( qt-static? ( ${OPERA_URI}/intel-freebsd/${PN}-${OPERAVER}.1-static-qt.i386.freebsd-${OPERALNG}-${OPERASUFF}.tar.bz2 ) )"
 
-DEPEND=">=sys-apps/sed-4
-	amd64? ( sys-apps/setarch )"
+DEPEND=">=sys-apps/sed-4"
 
 RDEPEND="|| ( ( x11-libs/libXrandr
 				x11-libs/libXp
